@@ -1,43 +1,46 @@
 package com.example.hhblogdevelop.service;
 
 
+import com.example.hhblogdevelop.dto.GlobalResponseDto;
 import com.example.hhblogdevelop.dto.PostRequestDto;
 import com.example.hhblogdevelop.dto.PostResponseDto;
-import com.example.hhblogdevelop.dto.GlobalResponseDto;
 import com.example.hhblogdevelop.entity.Post;
 import com.example.hhblogdevelop.entity.PostLike;
+import com.example.hhblogdevelop.entity.UserRoleEnum;
 import com.example.hhblogdevelop.entity.Users;
 import com.example.hhblogdevelop.exception.CustomException;
 import com.example.hhblogdevelop.repository.PostLikeRepository;
 import com.example.hhblogdevelop.repository.PostRepository;
 import com.example.hhblogdevelop.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.example.hhblogdevelop.exception.ErrorCode.*;
+import static com.example.hhblogdevelop.exception.ErrorCode.INVALID_USER;
+import static com.example.hhblogdevelop.exception.ErrorCode.POST_NOT_FOUND;
 
 
 @Service
 @RequiredArgsConstructor
 public class PostService {
 
-    // PostRepository 연결
     private final PostRepository postRepository;
     private final PostLikeRepository postLikeRepository;
-    // UserRepository 연결
     private final UserRepository userRepository;
 
     // 전체 게시물 목록 조회
     @Transactional(readOnly = true)
-    public List<PostResponseDto> getAllPosts() {
-        return postRepository.findAllByOrderByCreatedAtDesc().stream().map(PostResponseDto::new).collect(Collectors.toList());
+    public List<PostResponseDto> getAllPosts(Pageable pageable) {
+        List<PostResponseDto> posts = postRepository.findAll(pageable).stream().map(PostResponseDto::new).toList();
+        // 페이지에 글이 없으면 예외처리
+        if (posts.isEmpty()) {
+            throw new CustomException(POST_NOT_FOUND);
+        }
+        return posts;
     }
 
     // 선택한 게시물 상세 조회
@@ -64,7 +67,7 @@ public class PostService {
                 () -> new CustomException(POST_NOT_FOUND)
         );
 
-        if (post.getUsers().getUsername().equals(user.getUsername()) || user.getRole().equals(user.getRole().ADMIN)) {
+        if (post.getUser().getUsername().equals(user.getUsername()) || user.getRole().equals(UserRoleEnum.ADMIN)) {
             post.update(postRequestDto);
             return new PostResponseDto(post);
         } else {
@@ -79,7 +82,7 @@ public class PostService {
                 () -> new CustomException(POST_NOT_FOUND)
         );
 
-        if (post.getUsers().getUsername().equals(user.getUsername()) || user.getRole().equals(user.getRole().ADMIN)) {
+        if (post.getUser().getUsername().equals(user.getUsername()) || user.getRole().equals(UserRoleEnum.ADMIN)) {
             postRepository.delete(post);
             return new GlobalResponseDto("게시물이 삭제되었습니다.", HttpStatus.OK.value());
         } else {
@@ -88,15 +91,14 @@ public class PostService {
 
     }
 
-    // 좋아요
+    // 게시물 좋아요
     @Transactional
-    public GlobalResponseDto updateLike(Long id) {
+    public GlobalResponseDto updateLike(Long id, Users user) {
         Post post = postRepository.findById(id).orElseThrow(
                 () -> new CustomException(POST_NOT_FOUND)
         );
 
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        Users user = userRepository.findByUsername(authentication.getName()).orElseThrow(
+        Users findUser = userRepository.findByUsername(user.getUsername()).orElseThrow(
                 () -> new CustomException(INVALID_USER)
         );
 
